2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2011-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added API for empty filter check, resolves #28285

2011-07-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added documentation about void filters, resolves #28276

2011-05-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2011-05-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Enabled use of TypoScript to define default values for components properties, resolves #13660

2011-03-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation for inclusion of filter information in data structure, resolves #13972
	* Updated documentation to describe newer Tesseract components
	* Released to TER as version 1.0.2

2010-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.1

2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Data filter information should contain original filter information, resolves #11599
	* Added warning about extensions installation order, resolves #11549

2010-11-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved wording of installation check screen, resolves #10162

2010-10-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added data setter method to Data Filter interface, resolves #10059

2010-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release