@@ -1,3 +1,7 @@
+2011-12-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+    * Added utility method for getting a language object, resolves #32281
+
 2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released to TER as version 1.2.0
